--- a/#4/index.html
+++ b/#4/index.html
@@ -10,27 +10,29 @@
 </head>
 
 <body>
-	<h4>Seleccionar todos los elementos <b>P</b> con la clase <b>COLOR</b> y cambia su color a <b>ROJO</b> excepto el <b>PRIMERO</b></h4></br>
+	<h4>Remover los elementos <b>H3</b> que tengan la clase <b>NOMEQUIEROIR</b> excepto el 
+		<b>PRIMERO</b> que coincida y pintar de <b>azul</b> todos los demas que <b>no contengan clase.</b></h4></br>
 
-	<p class="COLOR">PRIMERO</p>
+	<h3>PRIMERO</h3>
 
-	<p class="COLOR">SEGUNDO</p>
+	<h3>SEGUNDO</h3>
 
-	<p class="CALOR">TERCERO</p>
+	<h3 class="NOMEQUIEROIR">TERCERO</h3>
 
-	<p class="CALOR">CUARTO</p>
+	<h3>CUARTO</h3>
 
-	<p class="CELOS">QUINTO</p>
+	<h3 class="NOMEQUIEROIR">QUINTO</h3>
 
-	<p class="CELOS">SEXTO</p>
+	<h3>SEXTO</h3>
 
-	<p class="CXLXR">SEPTIMO</p>
+	<h3 class="NOMEQUIEROIR">SEPTIMO</h3>
 
-	<p class="CXLXR">OCTAVO</p>
+	<h3>OCTAVO</h3>
 
-	<p class="CALOR">NOVENO</p>
+	<h3 class="NOMEQUIEROIR">NOVENO</h3>
 
-	<p class="COLOR">DECIMO</p>
+	<h3>DECIMO</h3>
+
 
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
