--- a/#5/index.html
+++ b/#5/index.html
@@ -10,16 +10,28 @@
 </head>
 
 <body>
-	<h4>Añadir 4 elementos <b>H5</b> al elemento <b>DIV</b> que tenga como id <b>#TEST</b> mediante un ciclo <b>FOR</b></h4></br>
+	<h4>Seleccionar todos los objetos <b>P</b> con la clase <b>COLOR</b> y cambia su color a <b>VERDE</b> excepto el 
+		<b>PRIMERO</b> todos los demas sin clase ponerlos en <b>ROJO.</b></h4></br>
 
-	<div style="width:200px; height: 200px; background: #bbdefb;"></div>
+	<p class="COLOR">PRIMERO</p>
 
-	<div id="TEST" style="width:200px; height: 200px; background: #ffcdd2;"></div>
+	<p class="COLOR">SEGUNDO</p>
 
-	<div style="width:200px; height: 200px; background: #c8e6c9;"></div>
+	<p class="CALOR">TERCERO</p>
 
-	<div style="width:200px; height: 200px; background: #fff9c4;"></div>
+	<p class="CALOR">CUARTO</p>
 
+	<p class="CELOS">QUINTO</p>
+
+	<p class="CELOS">SEXTO</p>
+
+	<p class="CXLXR">SEPTIMO</p>
+
+	<p class="CXLXR">OCTAVO</p>
+
+	<p class="CALOR">NOVENO</p>
+
+	<p class="COLOR">DECIMO</p>
 
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
