--- a/#1/index.html
+++ b/#1/index.html
@@ -10,27 +10,16 @@
 </head>
 
 <body>
-	<h4>Remover los elementos <b>H3</b> que tengan la clase <b>NOMEQUIEROIR</b> excepto el <b>PRIMERO</b> que coincida</h4></br>
+	<h4>Añadir mediante un ciclo <b>FOR</b>: 4 nodos <b>H5</b> al objeto <b>DIV</b> que tenga como id 
+		<b>#TEST</b> cambiar el color del texto a <b>rojo</b> y <b>remover los DIVS</b> restantes que no se utilizaran.</h4></br>
 
-	<h3 class="NOMEQUIEROIR">PRIMERO</h3>
+	<div id="E2" style="width:200px; height: 200px; background: #bbdefb;"></div>
 
-	<h3>SEGUNDO</h3>
+	<div id="TEST" style="width:200px; height: 200px; background: #ffcdd2;"></div>
 
-	<h3 class="NOMEQUIEROIR">TERCERO</h3>
+	<div id="E1" style="width:200px; height: 200px; background: #c8e6c9;"></div>
 
-	<h3>CUARTO</h3>
-
-	<h3 class="NOMEQUIEROIR">QUINTO</h3>
-
-	<h3>SEXTO</h3>
-
-	<h3 class="NOMEQUIEROIR">SEPTIMO</h3>
-
-	<h3>OCTAVO</h3>
-
-	<h3 class="NOMEQUIEROIR">NOVENO</h3>
-
-	<h3>DECIMO</h3>
+	<div id="E3" style="width:200px; height: 200px; background: #fff9c4;"></div>
 
 
 	<!-- jQuery library -->
